--- a/week_9/finance/templates/buy.html
+++ b/week_9/finance/templates/buy.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block main %}
+    <h1>Buy</h1>
     <form action="/buy" method="post">
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="symbol" placeholder="Symbol" type="text">
@@ -12,6 +13,7 @@
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="shares" placeholder="Shares" type="number">
         </div>
+
         <button class="btn btn-primary" type="submit">Buy</button>
     </form>
 {% endblock %}
