--- a/week_9/finance/templates/index.html
+++ b/week_9/finance/templates/index.html
@@ -5,32 +5,32 @@
 {% endblock %}
 
 {% block main %}
-<table class="table">
-    <thead>
-      <tr>
-        <th scope="col">symbols</th>
-        <th scope="col">shares</th>
-        <th scope="col">price</th>
-        <th scope="col">TOTAL</th>
-      </tr>
-    </thead>
-    <tbody>
-        {% for row in database %}
-      <tr>
-        <td>{{  row["symbol"] }}</td>
-        <td>{{  row["shares"] }}</td>
-        <td>{{  row["price"] }}</td>
-        <td></td>
-      </tr>
-      {% endfor %}
-    </tbody>
-    <tfoot>
-        <tr>
-            <td></td>
-            <td></td>
-            <th scope="col">cash</td>
-            <th scope="col">{{ cash }}</th>
-          </tr>
-    </tfoot>
-  </table>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Symbols</th>
+                <th scope="col">Shares</th>
+                <th scope="col">Price</th>
+                <th scope="col">TOTAL</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for row in database %}
+                <tr>
+                    <td>{{ row["symbol"] }}</td>
+                    <td>{{ row["shares"] }}</td>
+                    <td>{{ row["price"] }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+        <tfoot>
+            <tr>
+                <td></td>
+                <td></td>
+                <th scope="1">Total Amount</th>
+                <th scope="1">{{ cash }}</th>
+            </tr>
+        </tfoot>
+    </table>
+
 {% endblock %}
