--- a/week_9/finance/templates/quote.html
+++ b/week_9/finance/templates/quote.html
@@ -5,10 +5,12 @@
 {% endblock %}
 
 {% block main %}
+    <h1>Quote</h1>
     <form action="/quote" method="post">
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="symbol" placeholder="Symbol" type="text">
         </div>
+
         <button class="btn btn-primary" type="submit">Quote</button>
     </form>
 {% endblock %}
